# ci_20200320

./: .coverage  .coveragerc  README.md  coverage.xml  gitignore  pyproject.toml
.github/workflows/: main.yml
app/: db.sqlite3
app/blog/: models.py  tests.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py
app/config/: settings.py  urls.py
app/templates/blog/: post-list.html
